--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "homepage": "https://github.com/enso-ui/io#readme",
   "dependencies": {
+    "@enso-ui/directives": "^1.0",
     "@enso-ui/ui": "^4.0",
     "@fortawesome/fontawesome-svg-core": "^1.2.2",
     "@fortawesome/free-solid-svg-icons": "^5.2.0",
