local fa component import

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@enso-ui/io",
-  "version": "2.0.2",
+  "version": "2.0.3",
   "description": "Basic io package",
   "main": "src/bulma/components/navbar/IO.vue",
   "scripts": {
@@ -25,6 +25,7 @@
     "@enso-ui/ui": "^5.0",
     "@fortawesome/fontawesome-svg-core": "^1.2.2",
     "@fortawesome/free-solid-svg-icons": "^5.2.0",
+    "@fortawesome/vue-fontawesome": "3.0.0-5",
     "vue": "^3.0",
     "vuex": "^4.0.0"
   },
