--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@enso-ui/io",
+  "name": "@cgdsoftware/io",
   "version": "3.1.1",
   "description": "Basic io package",
   "main": "src/bulma/components/navbar/IO.vue",
@@ -21,10 +21,10 @@
   },
   "homepage": "https://github.com/enso-ui/io#readme",
   "dependencies": {
-    "@enso-ui/directives": "^2.0",
-    "@enso-ui/mixins": "^4.0",
-    "@enso-ui/ui": "^6.0",
-    "@enso-ui/users": "^3.0",
+    "@cgdsoftware/directives": "^2.0",
+    "@cgdsoftware/mixins": "^4.0",
+    "@cgdsoftware/ui": "^6.0",
+    "@cgdsoftware/users": "^3.0",
     "@fortawesome/fontawesome-svg-core": "^1.2.2",
     "@fortawesome/free-solid-svg-icons": "^5.11.2",
     "@fortawesome/vue-fontawesome": "3.0.0-5",
